revised lectures and workshop: selection sort

--- a/materials/solution_03.ipynb
+++ b/materials/solution_03.ipynb
@@ -54,15 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ff322e8c-ee55-4e02-bcdf-a3d536b42a6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 6, 10]\n"
+     ]
+    }
+   ],
    "source": [
+    "def selectionSort(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        smallest_index = i\n",
+    "        for j in range(i, len(arr)):\n",
+    "            if arr[j] < arr[smallest_index]: \n",
+    "                smallest_index = j\n",
+    "        arr[i], arr[smallest_index] = arr[smallest_index], arr[i]\n",
+    "    return arr\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Test the function with a sample input\n",
+    "arr = [5, 3, 6, 2, 10]\n",
+    "print(selectionSort(arr))\n"
    ]
   },
   {
@@ -82,17 +98,65 @@
     "3. Measure the time taken for each case using Python’s `time` module.\n",
     "4. Record and discuss your observations.\n",
     "\n",
+    "### Example Code:\n",
+    "```python\n",
+    "import time\n",
+    "import random\n",
+    "\n",
+    "# Generate arrays with different orders\n",
+    "random_array = [random.randint(0, 1000) for _ in range(1000)]\n",
+    "sorted_array = sorted(random_array)\n",
+    "reverse_sorted_array = sorted(random_array, reverse=True)\n",
+    "\n",
+    "# Measure time for each case\n",
+    "start = time.time()\n",
+    "selectionSort(random_array)\n",
+    "print(\"Random order time:\", time.time() - start)\n",
+    "\n",
+    "start = time.time()\n",
+    "selectionSort(sorted_array)\n",
+    "print(\"Sorted order time:\", time.time() - start)\n",
+    "\n",
+    "start = time.time()\n",
+    "selectionSort(reverse_sorted_array)\n",
+    "print(\"Reverse sorted order time:\", time.time() - start)\n",
+    "```\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "89246de1-935e-449a-b144-1dc9d16ec57e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime is 0.3169128894805908 sec.\n",
+      "Runtime is 0.2839810848236084 sec.\n",
+      "Runtime is 0.27861976623535156 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "random_x = np.random.randint(-1000, 1000, 3000)\n",
+    "sorted_x = np.sort(random_x)\n",
+    "reversed_x = sorted_x.copy()[::-1]\n",
+    "\n",
+    "test_array = [random_x, sorted_x, reversed_x]\n",
+    "for array in test_array:\n",
+    "    start = time.time()\n",
+    "    x = selectionSort(array)\n",
+    "    stop = time.time()\n",
+    "    runtime = stop-start\n",
+    "    print(f'Runtime is {runtime} sec.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,15 +189,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d5d52d89-1b46-4cfc-8f13-3ac70321c0f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1: [2, 3, 6, 5, 10]\n",
+      "Iteration 2: [2, 3, 6, 5, 10]\n",
+      "Iteration 3: [2, 3, 5, 6, 10]\n",
+      "Iteration 4: [2, 3, 5, 6, 10]\n",
+      "Iteration 5: [2, 3, 5, 6, 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 6, 10]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
+    "def selectionSort(arr):\n",
+    "    k = 0\n",
+    "    for i in range(len(arr)):\n",
+    "        k += 1\n",
+    "        smallest_index = i\n",
+    "        for j in range(i, len(arr)):\n",
+    "            if arr[j] < arr[smallest_index]: \n",
+    "                smallest_index = j\n",
+    "        arr[i], arr[smallest_index] = arr[smallest_index], arr[i]\n",
+    "        print(f'Iteration {k}: {arr}')\n",
+    "    return arr\n",
     "\n",
-    "\n",
-    "\n"
+    "# Test the function with a sample input\n",
+    "arr = [5, 3, 6, 2, 10]\n",
+    "selectionSort(arr)\n"
    ]
   },
   {
@@ -167,14 +265,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "b46d2132-13d0-4e6d-952f-4f4be9f2e53d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Bob', 20), ('Alice', 25), ('Charlie', 30)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [(\"Alice\", 25), (\"Bob\", 20), (\"Charlie\", 30)]\n",
+    "selectionSortByKey(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8fbb2869-62ac-4d2d-9865-8e2a8adab674",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n"
+    "def selectionSortByKey(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        smallest_index = i\n",
+    "        for j in range(i, len(arr)):\n",
+    "            if arr[j][1] < arr[smallest_index][1]: \n",
+    "                smallest_index = j\n",
+    "        arr[i], arr[smallest_index] = arr[smallest_index], arr[i]\n",
+    "    return arr"
    ]
   },
   {
