added quicksort solutions

--- a/materials/solution_05.ipynb
+++ b/materials/solution_05.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8a51d3af-c63d-4ba1-934f-7c7a6e3a474e",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
+   "id": "43f9ec59-8a69-46e1-be06-40b72989abd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sort [1, 2, 4, 1, 3]\n",
+      "Sort [1, 2]\n",
+      "Sort [1]\n",
+      "Sort [2]\n",
+      "Merge [1] and [2] -> [1, 2] with count=0\n",
+      "Sort [4, 1, 3]\n",
+      "Sort [4]\n",
+      "Sort [1, 3]\n",
+      "Sort [1]\n",
+      "Sort [3]\n",
+      "Merge [1] and [3] -> [1, 3] with count=0\n",
+      "Merge [4] and [1, 3] -> [1, 3, 4] with count=2\n",
+      "Merge [1, 2] and [1, 3, 4] -> [1, 1, 2, 3, 4] with count=1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge(x, y):\n",
+    "    print(f'Merge {x} and {y}', end=' -> ')\n",
+    "    z = []\n",
+    "    count = 0\n",
+    "    while x and y:\n",
+    "        if x[0] <= y[0]:\n",
+    "            z.append(x.pop(0))\n",
+    "        else:\n",
+    "            z.append(y.pop(0))\n",
+    "            count += len(x)\n",
+    "    z += x + y\n",
+    "    print(f'{z} with {count=}')\n",
+    "    return z\n",
+    "\n",
+    "def mergesort(array):\n",
+    "    print(f'Sort {array}')\n",
+    "    if len(array) <= 1:\n",
+    "        return array\n",
+    "    else:\n",
+    "        mid = len(array) // 2\n",
+    "        left = array[:mid]\n",
+    "        right = array[mid:]\n",
+    "        return merge(mergesort(left), mergesort(right))\n",
+    "\n",
+    "mergesort([1, 2, 4, 1, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "8c7161b9-5174-4d05-ae74-0be19e6b934b",
    "metadata": {},
    "outputs": [
@@ -154,41 +218,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "def count_inversions(arr):\n",
-    "    def merge_and_count(left, right):\n",
-    "        merged = []\n",
-    "        i = j = count = 0\n",
-    "        while i < len(left) and j < len(right):\n",
-    "            if left[i] <= right[j]:\n",
-    "                merged.append(left[i])\n",
-    "                i += 1\n",
-    "            else:\n",
-    "                merged.append(right[j])\n",
-    "                j += 1\n",
-    "                count += len(left) - i\n",
-    "        merged.extend(left[i:])\n",
-    "        merged.extend(right[j:])\n",
-    "        return merged, count\n",
-    "    \n",
-    "    def divide_and_count(arr):\n",
-    "        if len(arr) < 2:\n",
-    "            return arr, 0\n",
-    "        mid = len(arr) // 2\n",
-    "        left, left_count = divide_and_count(arr[:mid])\n",
-    "        right, right_count = divide_and_count(arr[mid:])\n",
-    "        merged, merge_count = merge_and_count(left, right)\n",
-    "        return merged, left_count + right_count + merge_count\n",
-    "    \n",
-    "    _, total_count = divide_and_count(arr)\n",
-    "    return total_count\n",
+    "def count_inversion(array):\n",
+    "    _, count = mergesort_and_count(array)\n",
+    "    return count\n",
+    "\n",
+    "def mergesort_and_count(array):\n",
+    "    if len(array) <= 1:\n",
+    "        return array, 0\n",
+    "    else:\n",
+    "        mid = len(array) // 2\n",
+    "        left = array[:mid]\n",
+    "        right = array[mid:]\n",
+    "        merged_left, count_left = mergesort_and_count(left)\n",
+    "        merged_right, count_right = mergesort_and_count(right)\n",
+    "        merged_lf, count_lf = merge_and_count(merged_left, merged_right)\n",
+    "        return merged_lf, count_left+count_right+count_lf\n",
+    "\n",
+    "def merge_and_count(x, y):\n",
+    "    z = []\n",
+    "    count = 0\n",
+    "    while x and y:\n",
+    "        if x[0] <= y[0]:\n",
+    "            z.append(x.pop(0))\n",
+    "        else:\n",
+    "            z.append(y.pop(0))\n",
+    "            count += len(x)\n",
+    "    z += x + y\n",
+    "    return z, count   \n",
     "\n",
     "# Testing\n",
-    "print(count_inversions([2, 4, 1, 3, 5]))  # Output: 3"
+    "print(count_inversion([2, 4, 7, 1, 3, 5]))  # Output: 3"
    ]
   },
   {
